# Polymer-Molecular-Dynamics

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
Equilibration/: README.md  mkinput.py
Gas_diffusivity/: mkinput_gas.py
Solvent_diffusivity/: mkinput_solvent.py
Solvent_diffusivity/cpu/: job_prod.pbs  lmp.in  lmp_prod.in
pmd/: __init__.py
pmd/core/: Analysis.py  Builder.py  ForceField.py  Job.py  Lammps.py  Pmd.py  Procedure.py  System.py  __init__.py
pmd/entry/: analyze.py  load.py  template.py
pmd/postprocess/: Analysis.py
pmd/postprocessing/: Analysis.py  TrajectoryReader.py  __init__.py
pmd/tests/: conftest.py
pmd/util/: Log.py  Util.py  __init__.py
scripts/Deformation/: mkinput_deformation.py
scripts/Equilibration/: README.md  Sample_list_of_SMILES.csv  config.yaml  mkinput.py
scripts/Equilibration/PE_equilibration/: data.lmps  job.pbs  lmp.in
scripts/Gas_diffusivity/: mkinput_gas.py  random_500.csv
scripts/Shear_deformation/: mkinput_shear_deformation.py
scripts/Solvent_diffusivity/: mkinput_solvent.py  solvent_diffusivity.csv
scripts/Solvent_diffusivity/cpu/: job.pbs
scripts/Solvent_diffusivity/gpu/: job.pbs
scripts/Tensile_deformation/: mkinput_tensile_deformation.py
scripts/Tg/: README.md  mkinput_Tg.py
tests/: conftest.py  test_job.py  test_lammps.py  test_pmd.py  test_postprocessing.py  test_system.py
tests/test_config/: config.yaml
tests/test_job/: job.sh
tests/test_lammps/: lmp.in  lmp_Equilibration.in  lmp_MSDMeasurement.in  lmp_Minimization.in  lmp_NPT_NVT.in  lmp_ShearDeformation.in  lmp_TensileDeformation.in  lmp_TgMeasurement.in
tests/test_pmd/: config.yaml  data.lmps  job.pbs  lmp.in
tests/test_postprocessing/: equil.lammpstrj  temp_vs_density.txt
tutorials/Equilibration/: mkinput.py
tutorials/Gas_diffusivity/: random_500.csv
tutorials/Installation/: README.md
tutorials/Solvent_diffusivity/: mkinput_solvent.py  solvent_diffusivity.csv
tutorials/Solvent_diffusivity/cpu/: msd.pbs  msd.py
tutorials/Tg/: Sample_list_of_SMILES.csv  mkinput_Tg.py
website/: README.md  cleanup_api.py  docusaurus.config.js  package-lock.json  package.json  pydoc-markdown.yml
website/api/: Overview.md  sidebar.json
website/api/core/: Analysis.md  Builder.md  ForceField.md  Job.md  Lammps.md  Pmd.md  Procedure.md  System.md
website/api/postprocess/: Analysis.md
website/api/postprocessing/: Analysis.md  TrajectoryReader.md
website/api/util/: Log.md
website/docs/: intro.md
website/docs/getting-started/: congratulations.md  create-a-blog-post.md  create-a-document  create-a-page  create-data-files.md  create-job-files.md  create-lammps-files.md  deploy-your-site  installation.md  markdown-features  multiple-systems.md  simple-PE-system.md  split-the-simulation.md
website/docs/guides/: gas-diffusivity.md  glass-transition-temperature.md  mechanical-properties.md  solvent-diffusivity.md  viscosity.md
website/guide/: installation.md
(+10 files in other folders)
